--- a/DiscoDancing/DiscoDancing.tex
+++ b/DiscoDancing/DiscoDancing.tex
@@ -176,17 +176,17 @@ with speed proportional to the distance $\rho(\phi) = AP$. Here $\omega_0$ is th
      \omega &= \frac{v_P}{\rho (\phi) \csc \alpha} \\
                  &= \omega_0 \sin\alpha  \\
                   & = \omega_0 \frac{2R \sin\alpha}{2R}  \\
-                  &= \omega_0 \frac{PP^\prime}{2R} 
+                  &=  \left( \frac{\omega_0}{2R}\right) PP^\prime 
 \end{align*}
 proportional to the length of chord $\overline{PP^\prime}$.
 
-In the general case when ${\cal C}_2$ is a circle of radius $r$ centered at $(0,a)$ (need to define the coordinate system), the motion (\ref{Eq:PendulumMotion}) with speed proportional to the distance $\rho = BP$ from $P$ to ${\cal C}_1$ (the length of segment $\overline{BP}$ tangent to ${\cal C}_2)$ also has the constant-time property. This is because
+In the general case when ${\cal C}_2$ is a circle of radius $r$ centered at $(0,a)$ (need to define the coordinate system), the motion (\ref{Eq:PendulumMotion}) with speed proportional to the distance $\rho = BP$ from $P$ to ${\cal C}_1$ (the length of segment $\overline{BP}$ tangent to ${\cal C}_2)$ also has the equal-time property. This is because
 
 \pskip
 
-(a) the endpoints $P$ and $P^\prime$ of a chord tangent to ${\cal C}_2$ traverse the arclengths (\ref{Eq:ArcLength}) and (\ref{Eq:ArcLength2}) (where $\rho^\prime =  BP^\prime$) as $\overline{PP^\prime}$ turns through the angle $d\phi$, and 
+(a) as $\overline{PP^\prime}$ turns through the angle $d\phi$, the endpoints $P$ and $P^\prime$ of a chord tangent to ${\cal C}_2$ traverse the arclengths (\ref{Eq:ArcLength}) and (\ref{Eq:ArcLength2}) (where $\rho^\prime =  BP^\prime$) and
 
-(b) a necessary and sufficient condition for a motion to be equal-time is that $P$ and $P^\prime$ traverse these arclengths in equal times.
+(b) a motion is equal-time if and only if $P^\prime$ traverse these arclengths in equal times. %a necessary and sufficient condition for a motion to be equal-time is that $P$ and $P^\prime$ traverse these arclengths in equal times.
 
 \pskip
 
@@ -204,19 +204,19 @@ So
 \[
     d\overrightarrow{p} = (d\rho - r \, d\phi ) \langle \sin \phi, -\cos \phi \rangle+ \rho \langle \cos\phi, \sin\phi \rangle \, d\phi .
 \]
-The above resolves the component of $P$'s displacement into components, the first parallel to $\overline{PP^\prime}$, the second normal to $\overline{PP^\prime}$. So, as $\overline{PP^\prime}$ turns through the angle $d\phi$, $P$ traverses the differential arclength
+The above resolves the component of $P$'s displacement into two components, the first parallel to $\overline{PP^\prime}$, the second normal to $\overline{PP^\prime}$. So, as $\overline{PP^\prime}$ turns through the angle $d\phi$, $P$ traverses the differential arclength
 \[
    ds = |d\overrightarrow{p}| = \rho \csc \alpha \, d\phi
 \]
 along ${\cal C}_1$. 
 
-As for part (b), by subtraction (ie. differentiation) for an equal-time motion $P$ and $P^\prime$ traverse their respective differential arclengths in equal times. And conversely, by addition (ie. integration) a motion is equal-time if $P$ and $P^\prime$ traverse their respective differential arclengths in equal times. For a formal proof, it helps to regard $\rho = BP$ as a function $\rho = g(\theta)$ of the central angle $\angle EOP$ (see Figure ?). Then $ds = R \, d\phi$ and with $\theta^\prime = k(\theta)$ the central angle $\angle EOP^\prime$, the time for the motion to traverse the arc subtended by $\overline{PP^\prime}$ is
+As for part (b), by subtraction (ie. differentiation)  $P$ and $P^\prime$ traverse their respective differential arclengths for an equal-time motion in equal times. And the conversely holds by addition (ie. integration). For a formal proof, it helps to regard $\rho = BP$ as a function $\rho = g(\theta)$ of the central angle $\angle EOP$ (see Figure ?). Then $ds = R \, d\phi$ and with $\theta^\prime = k(\theta)$ the central angle $\angle EOP^\prime$, the time for the motion to traverse the arc subtended by $\overline{PP^\prime}$ is
 \[
-  T(\theta) =  \int_\theta^{k(\theta)} \frac{R\, d\theta}{\omega_0 g(\theta)}.
+  T(\theta) =  \int_\theta^{k(\theta)} \frac{R\, d\theta^*}{\omega_0 g(\theta^*)}.
 \]
 Then
 \begin{align*}
-  \frac{d}{d\theta} \int_\theta^{k(\theta)} \frac{R\, d\theta}{\omega_0 g(\theta)} &= \frac{R}{\omega_0}\left(   \frac{k^\prime(\theta)}{g(k(\theta))} - \frac{1}{g(\theta)}        \right) = 0
+  \frac{d}{d\theta} \int_\theta^{k(\theta)} \frac{R\, d\theta^*}{\omega_0 g(\theta^*)} &= \frac{R}{\omega_0}\left(   \frac{k^\prime(\theta)}{g(k(\theta))} - \frac{1}{g(\theta)}        \right) = 0
 \end{align*}
 since
 \[
