--- a/DiscoDancing/DiscoDancing.tex
+++ b/DiscoDancing/DiscoDancing.tex
@@ -230,7 +230,7 @@ since by part (a) above
 \begin{exploration}
 \begin{onlineOnly}
     \begin{center}
-\desmos{qco4rghhfi }{450}{600}  
+\desmos{icdpubi1db}{450}{600}  
 \end{center}
 \end{onlineOnly}
 
