--- a/DiscoDancing/DiscoDancing.tex
+++ b/DiscoDancing/DiscoDancing.tex
@@ -206,6 +206,13 @@ where $\rho^\prime =  BP^\prime$, and
 
 (b) a motion is equal-time if and only if $P$ and $P^\prime$ traverse these arclengths in equal times. %a necessary and sufficient condition for a motion to be equal-time is that $P$ and $P^\prime$ traverse these arclengths in equal times.
 
+\begin{onlineOnly}
+    \begin{center}
+\desmos{nmxgwpl2fo}{450}{600}  
+\end{center}
+\end{onlineOnly}
+
+
 \pskip
 
 To show why (a) holds, let $\phi$ be the angle radius $\overline{AB}$ makes with the horizontal and $\alpha$ the acute angle $\overline{PP^\prime}$ makes with ${\cal C}_1$. Then 
