--- a/DiscoDancing/DiscoDancing.tex
+++ b/DiscoDancing/DiscoDancing.tex
@@ -137,7 +137,7 @@ where $\rho^\prime = AP^\prime$. And because $P$ and $P^\prime$ traverse these a
 \] 
 and
 \[
-    \frac{\rho}{v_P} = \frac{\rho^\prime}{v_{P^\prime}} .
+    \frac{\rho}{v_P} = \frac{\rho^\prime}{v_{P^\prime}} .  \label{Eq:SpeedCondition}
 \]
 So if 
 \[
@@ -223,19 +223,26 @@ In the general case when ${\cal C}_2$ is a circle the key points are the same. %
 
 \pskip
 
-(a) Let chord $\overline{PP^\prime}$ be tangent to ${\cal C}_2$ at $B$ and let $\rho$, $\rho^\prime$ be the respective distances $BP$ and $BP^\prime$. Then as $\overline{PP^\prime}$ turns through the angle $d\phi$, its endpoints $P$ and $P^\prime$ traverse their respective arclengths (\ref{Eq:ArcLength}) and (\ref{Eq:ArcLength2})
+(a) Let chord $\overline{PP^\prime}$ be tangent to ${\cal C}_2$ at $B$ and let $\rho$, $\rho^\prime$ be the respective distances $BP$ and $BP^\prime$. Then as $\overline{PP^\prime}$ turns through the angle $d\phi$, its endpoints $P$ and $P^\prime$ traverse their respective arclengths %(\ref{Eq:ArcLength}) and (\ref{Eq:ArcLength2})
 \[
      ds = \rho \csc \alpha \, d\phi \,\,\,\,\, \text{ and } \,\,\,\, ds^\prime = \rho^\prime \csc \alpha \, d\phi
 \]  
 in equal times.
 
+(b) A motion around ${\cal C}_1$ is equal-time if and only if (see \ref{Eq:SpeedCondition})
+\[
+     \frac{ds}{v_P} = \frac{ds^\prime}{v_{P^\prime}}
+\] 
+holds for all chords $\overline{PP^\prime}$ tangent to ${\cal C}_1$.
+
+
 %As chord $\overline{PP^\prime}$ tangent to ${\cal C}_2$ at $B$ turns through the angle $d\phi$, its endpoints $P$ and $P^\prime$ traverse their respective arclengths (\ref{Eq:ArcLength}) and (\ref{Eq:ArcLength2})
 %\[
 %     ds = \rho \csc \alpha \, d\phi \,\,\,\,\, \text{ and } \,\,\,\, ds^\prime = \rho^\prime \csc \alpha \, d\phi,
 %\]
-where $\rho = BP$ amd $\rho^\prime =  BP^\prime$.
+%where $\rho = BP$ amd $\rho^\prime =  BP^\prime$.
 
-(b) A motion is equal-time if and only if $P$ and $P^\prime$ traverse these arclengths in equal times or equivalently that their speeds are proportional to the distances $\rho = BP$ and $\rho^\prime = BP^\prime$. %a necessary and sufficient condition for a motion to be equal-time is that $P$ and $P^\prime$ traverse these arclengths in equal times.
+%(b) A motion is equal-time if and only if $P$ and $P^\prime$ a traverse these arclengths in equal times or equivalently that their speeds are proportional to the distances $\rho = BP$ and $\rho^\prime = BP^\prime$. %a necessary and sufficient condition for a motion to be equal-time is that $P$ and $P^\prime$ traverse these arclengths in equal times.
 
 \begin{onlineOnly}
     \begin{center}
