--- a/DiscoDancing/DiscoDancing.tex
+++ b/DiscoDancing/DiscoDancing.tex
@@ -136,9 +136,9 @@ where $\rho^\prime = AP^\prime$. And because $P$ and $P^\prime$ traverse these a
    \frac{ds}{v_P} = \frac{ds^\prime}{v_{P^\prime}}
 \] 
 and
-\[
+\begin{equation}
     \frac{\rho}{v_P} = \frac{\rho^\prime}{v_{P^\prime}} .  \label{Eq:SpeedCondition}
-\]
+\end{equation}
 So if 
 \[
   v_P = f(\phi) \, , 0\leq \phi \leq \pi , 
@@ -223,17 +223,17 @@ In the general case when ${\cal C}_2$ is a circle the key points are the same. %
 
 \pskip
 
-(a) Let chord $\overline{PP^\prime}$ be tangent to ${\cal C}_2$ at $B$ and let $\rho$, $\rho^\prime$ be the respective distances $BP$ and $BP^\prime$. Then as $\overline{PP^\prime}$ turns through the angle $d\phi$, its endpoints $P$ and $P^\prime$ traverse their respective arclengths %(\ref{Eq:ArcLength}) and (\ref{Eq:ArcLength2})
+(a) Let chord $\overline{PP^\prime}$ be tangent to ${\cal C}_2$ at $B$ and let $\rho$, $\rho^\prime$ be the respective distances $BP$ and $BP^\prime$. Then as $\overline{PP^\prime}$ turns through the angle $d\phi$, its endpoints $P$ and $P^\prime$ traverse their respective arclengths (see \ref{Eq:ArcLength}) and (\ref{Eq:ArcLength2})
 \[
      ds = \rho \csc \alpha \, d\phi \,\,\,\,\, \text{ and } \,\,\,\, ds^\prime = \rho^\prime \csc \alpha \, d\phi
 \]  
 in equal times.
 
-(b) A motion around ${\cal C}_1$ is equal-time if and only if (see \ref{Eq:SpeedCondition})
+(b) A motion around ${\cal C}_1$ is equal-time if and only if (see (\ref{Eq:SpeedCondition}))
 \[
-     \frac{ds}{v_P} = \frac{ds^\prime}{v_{P^\prime}}
+     \frac{ds}{v_P} = \frac{ds^\prime}{v_{P^\prime}}  \text{ or equivalently } \frac{\rho}{v_P} = \frac{\rho^\prime}{v_{P^\prime}} 
 \] 
-holds for all chords $\overline{PP^\prime}$ tangent to ${\cal C}_1$.
+for all chords $\overline{PP^\prime}$ tangent to ${\cal C}_1$.
 
 
 %As chord $\overline{PP^\prime}$ tangent to ${\cal C}_2$ at $B$ turns through the angle $d\phi$, its endpoints $P$ and $P^\prime$ traverse their respective arclengths (\ref{Eq:ArcLength}) and (\ref{Eq:ArcLength2})
@@ -252,7 +252,7 @@ holds for all chords $\overline{PP^\prime}$ tangent to ${\cal C}_1$.
 
 \pskip
 
-So if we knew \emph{apriori} that a particular circle configuration forced each path of tangent chords to close with three segments, we could arbitrarily define an equal-time motion along the outer arc subtended by a chord $CD$ of an arbitrary triangle $\Delta CDE$ circumscribed about ${\cal C}_2$. 
+So if we knew \emph{apriori} that a particular configuration of ${\cal C}_1$, ${\cal C}_2$ forced each path of tangent chords to close, say with three segments, we could arbitrarily define an equal-time motion along the outer arc subtended by a chord $\overline{CD}$ of an arbitrary triangle $\Delta CDE$ circumscribed about ${\cal C}_2$. Then the motions around the outer arcs subtended by $\overline{DE}$ and $\overline{DE}$ would be determined by .................................
 
 
 To show why (a) holds, let $\phi$ be the angle radius $\overline{AB}$ makes with the horizontal and $\alpha$ the acute angle $\overline{PP^\prime}$ makes with ${\cal C}_1$. Then 
